prevent keywords from collapsing

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -7,7 +7,6 @@ body {
     color: #121220;
     background-color: #e2dfdf;
     font-family: system-ui, sans-serif;
-    overflow-x: hidden;
 }
 ::-webkit-scrollbar {
     width: 0.5em;
@@ -132,6 +131,7 @@ li {
     text-align: center;
     color: rgba(18, 18, 32, 0.8);
     cursor: pointer;
+    white-space: nowrap;
 }
 .highlight {
     background-color: #FAFF81;
@@ -224,7 +224,7 @@ span .clicked {
     width: 100%;
     height: 225px;
     max-height: 250px;
-    overflow-y: auto;
+    overflow: auto;
 }
 #controls {
     margin: -155px 0 -30px 0;
